Fix spaces on mobile

--- a/dracula.css
+++ b/dracula.css
@@ -53,6 +53,12 @@
 }
 
 @media (max-width: 500px) {
+  .messages .msg {
+    line-height: 1.3;
+  }
+}
+
+@media (max-width: 500px) {
   .messages .msg,
   textarea,
   input {
@@ -517,4 +523,15 @@ kbd {
 .window h2,
 .window h3 {
   color: var(--body-color);
+}
+
+#chat .msg[data-type=condensed] .msg,
+#chat .msg {
+  padding-top: 0;
+  padding-bottom: 0;
+
+  @media (max-width: 479px) {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
 }
